--- a/CelestialGUI/CelestialGUI.vcxproj.filters
+++ b/CelestialGUI/CelestialGUI.vcxproj.filters
@@ -84,4 +84,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".clang-tidy" />
+  </ItemGroup>
 </Project>
